objects/agf__PPM_Portfolio__c.object
<CustomObject>
    <description>PPM: Used to capture Portfolio information including associated Requests, Projects, and Sustaining efforts.</description>
    <fields>
        <fullName>agf__Portfolio_Goals__c</fullName>
        <label>Portfolio Goals</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>agf__Portfolio_Health_Color__c</fullName>
        <description>Color/icon used to better visualize the current Portfolio Health field value.</description>
        <formula>IMAGE(
CASE( agf__Portfolio_Health__c ,
&quot;Not Started&quot;, &quot;/img/alohaSkin/setup/setup_selected_bottombg.png&quot;,
&quot;On Track&quot;, &quot;/img/samples/color_green.gif&quot;,
&quot;Watch&quot;, &quot;/img/samples/color_yellow.gif&quot;,
&quot;Blocked&quot;, &quot;/img/samples/color_red.gif&quot;,
&quot;Completed&quot;, &quot;/img/checkbox_checked.gif&quot;,
&quot;Canceled&quot;, &quot;/img/checkbox_unchecked.gif&quot;,
&quot;On Hold&quot;, &quot;/img/alohaSkin/help_grey.png&quot;,
&quot;/s.gif&quot;),
&quot;status color&quot;,15,30)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Color/icon used to better visualize the current Portfolio Health field value.</inlineHelpText>
        <label>Portfolio Health Color</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>agf__Portfolio_Health__c</fullName>
        <label>Portfolio Health</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Started</fullName>
                    <color>#BBBBBB</color>
                    <label>Not Started</label>
                </value>
                <value>
                    <fullName>On Track</fullName>
                    <color>#419249</color>
                    <label>On Track</label>
                </value>
                <value>
                    <fullName>Watch</fullName>
                    <color>#F3D904</color>
                    <label>Watch</label>
                </value>
                <value>
                    <fullName>Blocked</fullName>
                    <color>#CC0000</color>
                    <label>Blocked</label>
                </value>
                <value>
                    <fullName>Completed</fullName>
                    <color>#3366FF</color>
                    <label>Completed</label>
                </value>
                <value>
                    <fullName>Canceled</fullName>
                    <color>#000000</color>
                    <label>Canceled</label>
                </value>
                <value>
                    <fullName>On Hold</fullName>
                    <color>#DDDDDD</color>
                    <label>On Hold</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>agf__Portfolio_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Portfolio Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Portfolios1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>agf__Portfolio_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Portfolio Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Portfolios</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>agf__Portfolio_Summary__c</fullName>
        <label>Portfolio Summary</label>
        <type>TextArea</type>
    </fields>
    <label>Portfolio</label>
    <listViews>
        <fullName>agf__All</fullName>
        <columns>NAME</columns>
        <columns>agf__Portfolio_Health__c</columns>
        <columns>agf__Portfolio_Health_Color__c</columns>
        <columns>agf__Portfolio_Manager__c</columns>
        <columns>agf__Portfolio_Summary__c</columns>
        <columns>agf__Portfolio_Goals__c</columns>
        <columns>agf__Portfolio_Owner__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Portfolio</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Portfolios</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>